# visionai-1

./: .gitignore  404.html  Dockerfile.pkg  Makefile  README-test.md  README.md  azure-pipelines.yml  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: codeql.yml  pr-preview-docs.yml
changelog/: index.html
company/about/: index.html
company/careers/: index.html
company/contact/: index.html
company/team/: index.html
custom/: index.html
custom/faqs/: index.html
custom/licensing/: index.html
custom/overview/: index.html
custom/request/: index.html
custom/retraining/: index.html
docs/: index.md  index1.md  reference.md  todo.md
docs/changelog/: index.md
docs/company/: about.md
docs/custom/: request.md
docs/overview/: how-it-works.md
overview/azure-managed-app/: index.html
overview/cameras/: index.html
overview/faqs/: index.html
overview/how-it-works/: index.html
overview/next-steps/: index.html
overview/scenarios/: index.html
overview/web-app/: index.html
phone-detection/: config.pbtxt
ppe-detection/: config.pbtxt  labels.txt
reference/: index.html
rust-and-corrosion-detection/: config.pbtxt  labels.txt
scenarios/: index.html
search/: search_index.json
smoke-and-fire-detection/: config.pbtxt
smoking-detection/: config.pbtxt  labels.txt
tests/: dummy_test.py
todo/: index.html
visionai/: auth.py  camera.py  config.py  device.py  docker-compose.yml  edgectl-backup.py  main.py  notes.py  pipeline.py  scenario.py  test_cli.py  web.py
visionai/camera/: README.md  __init__.py  camera.py
visionai/cli/: README.md  __init__.py  auth.py  camera_app.py  models_app.py  pipeline_app.py  scenario.py  scenario_app.py  serve.py  web.py  web_app.py
visionai/config/: .gitignore  camera-schema.json  download_schema.py  scenario-schema.json
visionai/models/: .gitignore  README.md  common.py  plots.py  triton_client.py  triton_client_yolov5.py
visionai/scenario/: README.md  __init__.py  scenario.py
visionai/scenarios/: README.md  __init__.py  face_blur.py  ppe_detection.py  scenarios.json  (+2 more)
(+13 files in other folders)
