[tool.poetry]
name = "visionai"
version = "0.1.10"
description = "Vision AI toolkit"
authors = ["Harsh Murari <hmurari@visionify.ai>"]
readme = "README.md"
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.7.0"}
requests = "^2.28.2"
pytest = "^7.2.1"
opencv-python = "^4.6.0"
torch = "^1.11.0"
torchvision = "^0.12.0"

[tool.poetry.scripts]
visionai = "visionai.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
homepage = "https://github.com/visionify/visionai"
documentation = "https://docs.visionify.com"
repository = "https://github.com/visionify/visionai"
