[tool.poetry]
name = "visionai"
version = "0.1.15"
description = "Vision AI toolkit"
authors = ["Harsh Murari <hmurari@visionify.ai>"]
readme = "README.md"
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.7.0"}
requests = "^2.28.2"
pytest = "^7.2.1"
opencv-python = "^4.6.0"
torch = "^1.11.0"
torchvision = ">=0.12,<0.15"
pyyaml = ">=5.4.1,<7.0.0"
pandas = "^1.3.5"
seaborn = ">=0.11.2,<0.13.0"
docker = ">=5.0.3,<7.0.0"
tritonclient = {extras = ["all"], version = "^2.29.0"}

[tool.poetry.scripts]
visionai = "visionai.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
homepage = "https://github.com/visionify/visionai"
documentation = "https://docs.visionify.com"
repository = "https://github.com/visionify/visionai"
